Add dummy exam activity, refactor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="category_t_label">Kategoria T</string>
     <string name="rate_app_label">Polub nas</string>
     <string name="training_label">Nauka</string>
-    <string name="assignment_label">Egzamin</string>
+    <string name="exam_label">Egzamin</string>
 </resources>
