--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="previous_question">Previous question</string>
     <string name="show_answer">Show answer</string>
     <string name="next_question">Next question</string>
+    <string name="question_number_delimiter">/</string>
 </resources>
